# FinBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .trivy.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-deploy.yml  proxy-deploy.yml
apps/web/: README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
backend/: .gitignore  README.md
config/: ai_sites.example.json  firecrawl_proxies.example.txt  official_release_calendar.example.yml  proxy_policy.example.json  runtime_config.example.json  source_catalog.example.yml  topic_watchlists.example.yml
contracts/: finbot-control-plane.openapi.yaml  quant-research.openapi.yaml
deploy/k8s/: README.md  finbot-secrets.env.example
docs/: 04-ingestion-all-sources-goal.md  05-ingestion-collector-detailed-design.md  11-reference-framework-code-reading-and-phase5-direction.md  13-phase6-market-advisory-api-workbench.md  14-phase7-web-service.md  17-p0-council-universe-worker-operations.md  README.md
docs/decisions/: 001-p0-council-universe-worker.md  003-p2-default-profiles-pricing-readiness.md  004-p21-versioned-council-workflow-dag.md  005-p3-product-catalog-watchlist-universe.md  006-multi-exchange-paper-execution.md  008-ai-workflow-v2-domain-engine.md  010-reflective-ai-execution-robot.md  012-java26-spring-data-jdbc-liquibase-python-quant.md  013-monorepo-layout.md  014-configurable-fallback-and-leverage-semantics.md  014-feature-parity-workspaces-and-spa-security.md  015-exchange-product-control-plane.md  015-research-forecast-and-validation-boundaries.md  016-segmented-research-and-exchange-environments.md  017-bounded-worker-and-control-plane-contract.md  018-evidence-consensus-not-majority-vote.md  019-runtime-secret-overrides.md  020-request-rotating-egress-and-managed-sources.md  021-target-aware-proxy-health.md  022-first-party-crawling-core.md  023-free-structured-source-catalog.md  024-multi-domain-news-search-discovery.md  025-public-searxng-instance-pool.md  026-reusable-crawler-header-profiles.md  027-exchange-proxy-host-network.md  (+8 more)
finbot/: __init__.py
proxy-gateway/: Dockerfile
quant-service/: Dockerfile  README.md  pyproject.toml
quant-service/src/finbot_quant/: __init__.py  engine.py  main.py  models.py
quant-service/tests/: test_http_stream.py
scripts/: install_finbot_web_task.ps1  install_finbot_worker_task.ps1  probe_paper_exchange_credentials.py  remove_finbot_web_task.ps1  remove_finbot_worker_task.ps1  run_finbot_service.ps1  scan_bybit_vless_nodes.py  secret_scan.py  test_finbot_services.ps1
services/browser-worker/: Dockerfile  README.md  pyproject.toml
services/browser-worker/src/finbot_browser_worker/: __init__.py  main.py  models.py  service.py  settings.py  solver.py
services/browser-worker/tests/: test_service_auth.py  test_settings.py  test_solver.py
services/proxy-gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/proxy-gateway/src/finbot_proxy/: engine.py  main.py  models.py  round_robin.py  runtime.py  singbox.py  subscription.py  target_probe.py  xray.py
services/proxy-gateway/tests/: test_round_robin.py  test_runtime.py  test_singbox.py  test_subscription.py  test_target_probe.py  test_xray.py
tasks/: current.md
tests/: test_ai_debate.py  test_ai_governance.py  test_ai_sites_config.py  test_architecture_guard.py  test_auth_challenge.py  test_autonomous_loop.py  test_autonomous_worker.py  test_council_learning.py  test_council_workflow.py  test_council_workflow_v2.py  test_decision_reviews.py  test_dispatcher_lifecycle.py  test_exchange_account_activity.py  test_exchange_accounts.py  test_execution_backtest.py  test_execution_risk_limits.py  test_execution_robot.py  test_experiment_registry.py  test_firecrawl_proxy_feedback.py  test_gate_public_market.py  test_hysteria2.py  test_instrument_universe.py  test_k8s_proxy_routing.py  test_margin_risk.py  test_metrics.py  test_oms.py  test_operations_stream.py  test_operator_workbench.py  test_p1_evaluation.py  test_paper_execution.py  test_portfolio_risk.py  test_postgres_compat.py  test_postgres_integration.py  test_product_center.py  test_proxy_pool.py  test_quant_api.py  test_research_feedback.py  test_research_history.py  test_research_pipeline.py  test_runtime_backup.py  (+12 more)
web-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+2101 files in other folders)
