[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "finbot-quant-service"
version = "2.0.0.dev0"
description = "Async quantitative research service for FinBot"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
finbot-quant = "finbot_quant.main:run"

[project.optional-dependencies]
dev = [
  "mypy>=1.19,<2",
  "openapi-spec-validator>=0.7,<1",
  "PyYAML>=6,<7",
  "types-PyYAML>=6,<7",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.14,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["N802"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
warn_unreachable = true
warn_unused_ignores = true
