[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "finbot-browser-worker"
version = "2.0.0.dev0"
description = "Playwright browser worker for FinBot C2 JS challenge resolution"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
  "playwright==1.52.0",
]

[project.scripts]
finbot-browser-worker = "finbot_browser_worker.main:run"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
