[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "finbot-proxy-gateway"
version = "2.0.0"
description = "Fail-closed subscription to HTTP proxy gateway for FinBot"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
finbot-proxy-gateway = "finbot_proxy.main:run"

[project.optional-dependencies]
dev = [
  "mypy>=1.19,<2",
  "pytest>=9,<10",
  "ruff>=0.14,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unreachable = true
warn_unused_ignores = true
